--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@apollo/subgraph": "^2.11.0",
+    "@react-email/render": "^1.4.0",
+    "bcryptjs": "^3.0.2",
     "classnames": "^2.5.1",
     "cloudinary": "^2.7.0",
     "graphql": "^16.11.0",
@@ -23,8 +25,10 @@
     "next-auth": "^5.0.0-beta.28",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^4.3.1",
     "react-phone-input-2": "^2.15.1",
     "redis": "^5.5.6",
+    "resend": "^6.2.0",
     "streamifier": "^0.1.1",
     "zod": "^3.25.64"
   },
